@@ -2,6 +2,10 @@ PluginRegistry Product Changelog
 
   After PluginRegistry 1.1.1
 
+    - Drop previously-activated plugins from the list returned from
+      'listPlugins' when they no longer implement the plugin interface.
+      (http://www.zope.org/Collectors/PAS/53)
+
     - Skip adding duplicate interfaces during non-purge import.
       (http://www.zope.org/Collectors/PAS/52)
 
